crates/swc_ecma_parser/tests/test262-error-references/fail/d5834ae85b6636ef.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/d5834ae85b6636ef.js:1:9
  |
1 | var x, y,
  |         ^

